Added henries' article

--- a/doc/src/future-plain-minted.tex
+++ b/doc/src/future-plain-minted.tex
@@ -311,7 +311,7 @@ for the development of multi-disciplinary educational and research programs.
 
 \item Office space with desktops to every student and large common room for recreational activities (meals, common lunches, gaming, watching movies etc etc)
 
-\item Many students collaborate on similar  thesis topics
+\item Many students collaborate on similar  thesis topics and \href{{http://www.dn.no/talent/2014/06/12/Utdannelse/sommervikar-ble-toppforsker}}{publish in top scientific articles}
 \end{itemize}
 
 \noindent
@@ -369,6 +369,21 @@ for the development of multi-disciplinary educational and research programs.
 % inline figure
 \centerline{\includegraphics[width=0.7\linewidth]{fig-future/uniforum-0.png}}
 % --- end paragraph admon ---
+
+
+
+
+% !split
+\subsection*{Undergraduate student publishes in PNAS}
+
+% --- begin paragraph admon ---
+\paragraph{Using research funds for visualization tools.}
+
+
+% inline figure
+\centerline{\includegraphics[width=0.7\linewidth]{fig-future/pnas.png}}
+% --- end paragraph admon ---
+
 
 
 
