--- a/doc/src/future-beamer.tex
+++ b/doc/src/future-beamer.tex
@@ -297,7 +297,7 @@ for the development of multi-disciplinary educational and research programs.
 
 \item Office space with desktops to every student and large common room for recreational activities (meals, common lunches, gaming, watching movies etc etc)
 
-\item Many students collaborate on similar  thesis topics
+\item Many students collaborate on similar  thesis topics and \href{{http://www.dn.no/talent/2014/06/12/Utdannelse/sommervikar-ble-toppforsker}}{publish in top scientific articles}
 \end{itemize}
 
 \noindent
@@ -346,6 +346,20 @@ for the development of multi-disciplinary educational and research programs.
 
 % inline figure
 \centerline{\includegraphics[width=0.7\linewidth]{fig-future/uniforum-0.png}}
+
+
+
+\end{block}
+\end{frame}
+
+\begin{frame}[plain,fragile]
+\frametitle{Undergraduate student publishes in PNAS}
+
+\begin{block}{Using research funds for visualization tools }
+
+
+% inline figure
+\centerline{\includegraphics[width=0.7\linewidth]{fig-future/pnas.png}}
 
 
 
