Update with Knut's comments

--- a/doc/src/future-beamer.tex
+++ b/doc/src/future-beamer.tex
@@ -126,14 +126,22 @@
 
 \author{Morten Hjorth-Jensen\inst{1,2}
 \and
-Hans Petter Langtangen\inst{3}
+Anders Malthe-Sørenssen\inst{1}}
+\institute{Department of Physics, University of Oslo\inst{1}
+\and
+Department of Physics and Astronomy, Michigan State University, USA\inst{2}}
+% ----------------- end author(s) -------------------------
+% AUTHOR: Hans Petter Langtangen at Department of Informatics, University of Oslo and Simula Research Laboratory
+
+
+% ----------------- author(s) -------------------------
+
+\author{Morten Hjorth-Jensen\inst{1,2}
 \and
 Anders Malthe-Sørenssen\inst{1}}
 \institute{Department of Physics, University of Oslo\inst{1}
 \and
-Department of Physics and Astronomy, Michigan State University, USA\inst{2}
-\and
-Department of Informatics, University of Oslo and Simula Research Laboratory\inst{3}}
+Department of Physics and Astronomy, Michigan State University, USA\inst{2}}
 % ----------------- end author(s) -------------------------
 
 \date{September 2 2015, 
@@ -164,26 +172,56 @@ The main topics of this talk are:
 \frametitle{The role of computations, from education to society}
 
 \begin{block}{}
-
 \textbf{Computations of almost all systems in science are central to our
 basic understanding of nature and technological advances}.
+\end{block}
+\begin{block}{Examples }
+\begin{itemize}
+\item quantum physical systems in nanotechnology and the characteristics of new materials
 
-The increase in computational power,
-improved algorithms for solving problems in science as well as access
-to high-performance facilities, allow researchers nowadays to study
-complicated systems across many length and energy scales. Applications
-span from studying quantum physical systems in nanotechnology and the
-characteristics of new materials or subamotic physics at its smallest
-length scale, to simulating galaxies and the evolution of the universe.
+\item subamotic physics at its smallest length scale
 
-Simulations are key to understanding
-cancer treatment and how the brain works,
-predicting climate changes and this week's weather,
-simulating natural disasters, semi-conductor devices,
-quantum computers, as well as assessing risk in the insurance and
-financial industry. 
+\item simulating galaxies and the evolution of the universe
 
+\item cancer treatment and how the brain works
 
+\item predicting climate changes and this week's weather
+
+\item simulating natural disasters
+
+\item semi-conductor devices, quantum computers,
+
+\item assessing risk in the insurance and financial industry
+
+\item and many many more
+\end{itemize}
+
+\noindent
+\end{block}
+\end{frame}
+
+\begin{frame}[plain,fragile]
+\frametitle{Modeling and computations as a way to enhance algorithminc thinking}
+
+\begin{block}{}
+\textbf{Algorithm} : A finite set of unambiguous instructions that, given some set of initial conditions, can be performed in a prescribed sequence to achieve a certain goal.
+\end{block}
+
+\begin{block}{Algorithmic  thinking as a way to }
+
+\begin{itemize}
+\item Enhance instruction based teaching
+
+\item Introduce research-based teaching  from day one
+
+\item Trigger further insights in math and other disciplines 
+
+\item Validation and verification of scientific results, with the possibility to emphasize ethical aspects as well. Version control is central.
+
+\item Good working practices from day one.
+\end{itemize}
+
+\noindent
 \end{block}
 \end{frame}
 
@@ -216,30 +254,6 @@ All these elements (and many more) aid students in maturing and gaining a better
 \end{frame}
 
 \begin{frame}[plain,fragile]
-\frametitle{Modeling and computations as a way to enhance algorithminc thinking}
-
-\begin{block}{}
-
-Algorithmic  thinking as a way to
-
-\begin{itemize}
-\item Enhance instruction based teaching
-
-\item Introduce research-based teaching  from day one
-
-\item Trigger further insights in math and other disciplines 
-
-\item Validation and verification of scientific results, with the possibility to emphasize ethical aspects as well. Version control is central.
-
-\item Good working practices from day one.
-\end{itemize}
-
-\noindent
-\textbf{Algorithm} : A finite set of unambiguous instructions that, given some set of initial conditions, can be performed in a prescribed sequence to achieve a certain goal.
-\end{block}
-\end{frame}
-
-\begin{frame}[plain,fragile]
 \frametitle{Computing and research-based education}
 
 \begin{block}{}
@@ -265,6 +279,8 @@ The standard situation we meet at an almost daily basis:
 \item Emphasis on insight and understanding of fundamental principles and laws in the Sciences.
 
 \item Be able to visualize, present, discuss, interpret and come with a critical analysis of the results, and develop a sound ethical attitude to own and other's work.
+
+\item Enhance reasoning about the scientific method
 \end{itemize}
 
 \noindent
@@ -290,7 +306,33 @@ for the development of multi-disciplinary educational and research programs.
 \begin{block}{}
 \begin{itemize}
 \item The main aim is that students should realize their own potentials and creative power
+\begin{itemize}
 
+ \item Students come with different dreams, ambitions, aspirations and topics they wish to study, our approach is to tailor the education to all these aspects
+
+ \item Our motto is to foster students which are better than their supervisors. This is how we define progress
+
+ \item This creates an atmosphere for learning and sharing knowledge
+
+ \item The emphasis is on learning and getting new insights. Students and teachers help each other
+
+ \item This creates an enviroment where students with different backgrounds and needs can thrive socially and scientifically
+
+ \item No competing environment but a drive and enthusiam in sharing and developing new knowledge
+\end{itemize}
+
+\noindent
+\end{itemize}
+
+\noindent
+\end{block}
+\end{frame}
+
+\begin{frame}[plain,fragile]
+\frametitle{Develop a social, scientific and learning environment}
+
+\begin{block}{}
+\begin{itemize}
 \item The computational physics group includes bachelor, master of science and doctoral students
 
 \item Project oriented work where students develop and mature their own ideas, with an individually tailored approach to each students
@@ -374,11 +416,14 @@ for the development of multi-disciplinary educational and research programs.
 \begin{block}{}
 Present and future problems, unlike traditional
 science and engineering, involve complex systems with many distinct
-physical processes. The wide open research topic of this century, both
-in industry and at universities, is how to effectively couple
-processes across different length and energy scales. Progress will
-rely on a multi-disciplinary approach and therefore the  need for
-multi-disciplinary educational and research programs.
+physical processes. 
+\begin{itemize}
+\item The wide open research topic of this century, both in industry and at universities, is how to effectively couple processes across different length and energy scales. 
+
+\item Progress will rely on a multi-disciplinary approach and therefore the  need for multi-disciplinary educational and research programs.
+\end{itemize}
+
+\noindent
 \end{block}
 
 \begin{block}{}
@@ -435,14 +480,20 @@ approach to key strategic initiatives, with examples like \emph{Energy, Material
 \frametitle{A new type of students}
 
 \begin{block}{}
-Candidates who are capable of modeling and understanding complicated
-systems, are in short supply in society.  The
-computational methods and approaches to scientific problems students learn
+\textbf{Candidates who are capable of modeling and understanding complicated
+systems, are in short supply in society}.  
+\end{block}
+\begin{block}{}
+The computational methods and approaches to scientific problems students learn
 when working on their thesis projects are very similar to the methods
-they will use in later stages of their careers.  To handle large
-numerical projects demands structured thinking and good analytical
-skills and a thorough understanding of the problems to be solved. This
-knowledge makes the students unique on the labor market, a labor market which in the years to come will experience heavy automatization and massive loss of jobs.
+they will use in later stages of their careers.  
+\begin{itemize}
+\item To handle large numerical projects demands structured thinking and good analytical skills and a thorough understanding of the problems to be solved. 
+
+\item This knowledge makes the students unique on the labor market, a labor market which in the years to come will experience heavy automatization and massive loss of jobs.
+\end{itemize}
+
+\noindent
 \end{block}
 
 \begin{block}{}
@@ -484,13 +535,15 @@ Computations (mastering and developing)  will play a central role in almost all 
 \begin{block}{}
 The insights, ideas and thoughts presented here, would have been impossible or difficult to gain without discussions, exchange of ideas and much more over many years with colleagues involved in the \href{{http://www.mn.uio.no/english/about/collaboration/cse/}}{Computing in Science Education} project at UiO. These dear friends and colleagues  are 
 \begin{itemize}
+\item Hans Petter Langtangen, Informatics and Simula Research Laboratory
+
 \item Knut Mørken, Mathematics
 
 \item Arnt Inge Vistnes, Physics
 
 \item Oyvind Ryan, Mathematics
 
-\item Solveig Kristensen, Dean of Education, MN faculty
+\item Solveig Kristensen and Annik Myhre, Deans of Education, MN faculty
 
 \item Hanne Sølna, Director of studies MN faculty
 \end{itemize}
