Thanks to our students added

--- a/doc/src/future-beamer.tex
+++ b/doc/src/future-beamer.tex
@@ -328,7 +328,7 @@ for the development of multi-disciplinary educational and research programs for 
 
 \item Office space with desktops to every student and large common room for recreational activities (meals, common lunches, gaming, watching movies etc etc)
 
-\item Many students collaborate on similar  thesis topics and \href{{http://www.dn.no/talent/2014/06/12/Utdannelse/sommervikar-ble-toppforsker}}{publish in top scientific articles}
+\item Many students collaborate on similar  thesis topics and \href{{http://www.dn.no/talent/2014/06/12/Utdannelse/sommervikar-ble-toppforsker}}{publish in top scientific journals}
 \end{itemize}
 
 \noindent
@@ -550,10 +550,13 @@ The insights, ideas and thoughts presented here, would have been impossible or d
 \item Solveig Kristensen and Annik Myhre, Deans of Education, MN faculty
 
 \item Hanne Sølna, Director of studies MN faculty
+
+\item \textbf{And: all our fantastisc students who keep giving us new insights!}
 \end{itemize}
 
 \noindent
 \end{block}
+Thanks for the attention.
 \end{frame}
 
 \end{document}
