changing size of figures

--- a/doc/src/future-beamer.tex
+++ b/doc/src/future-beamer.tex
@@ -279,12 +279,12 @@ This is what we do in the \href{{http://www.mn.uio.no/fysikk/english/research/gr
 \frametitle{\href{{http://www.mn.uio.no/fysikk/english/research/groups/computational/index.html}}{Computational Physics group at UiO}; our visions}
 
 \begin{columns}
-\column{0.5\textwidth}
+\column{0.4\textwidth}
 \begin{block}{}
 Physics students can \textbf{pose and solve problems} that combine \textbf{physical insights} with \textbf{mathematical tools} and now also \textbf{computational skills}. This provides a unique combination of applied and theoretical knowledge and skills. These features are invaluable for the development of multi-disciplinary educational and research programs.
 \end{block}
 
-\column{0.5\textwidth}
+\column{0.6\textwidth}
 % inline figure
 \centerline{\includegraphics[width=1.0\linewidth]{fig-future/md2.png}}
 
@@ -386,7 +386,7 @@ Large screens for visualizing and presenting scientific results. And gaming and 
 \begin{columns}
 \column{0.2\textwidth}
 \begin{block}{Our supercomuting cluster }
-When UiO's previous supercomputing cluster (titan.uio.no) was replaced by \textbf{abel.uio.no}, we got 200 nodes for free from USIT and built our own supercomputer
+When UiO's previous supercomputing cluster (titan.uio.no) was replaced by \textbf{abel.uio.no}, we got 200 nodes for free from USIT and built our own supercomputer. The value in 2006 of all the equipment was close to eight MNOK.
 \begin{itemize}
 \item It helps students run and develop programs for large-scale problems locally
 
@@ -417,6 +417,8 @@ When UiO's previous supercomputing cluster (titan.uio.no) was replaced by \textb
 \item Bachelor and master students publish in scientific journals 
 
 \item Undergraduate students are exposed to research at early stages, often working with more advanced students
+
+\item Students are exposed to all stages of the scientific process
 \end{itemize}
 
 \noindent
