Added a new line to new center and gave a better placement for the last figure

--- a/doc/src/future-beamer.tex
+++ b/doc/src/future-beamer.tex
@@ -198,7 +198,8 @@ has the potential to make UiO a top European university.
 A set of instructions to solve a problem.
 \end{block}
 
-\begin{block}{Algorithmic thinking applies to all disciplines. It }
+\begin{block}{}
+\textbf{Algorithmic thinking applies to all disciplines. It}
 \begin{itemize}
 \item Enhances instruction-based teaching
 
@@ -505,6 +506,8 @@ has the potential to make UiO a top European university
 \item Hire ten young professors (age $< 40$) dedicated to innovative \emph{computational} research and education
 
 \item Establish another ten professorships with  shared positions between the  new department and the discipline-specificdepartment (physics, chemistry, ...)
+
+\item Establish  best practices for computational and educational innovations, with a particular focus on  new learning material 
 \end{itemize}
 
 \noindent
@@ -535,7 +538,7 @@ has the potential to make UiO a top European university
 \frametitle{Computational Physics and  the Computing in Science Education project (UiO educational prize in 2011)}
 
 \begin{block}{}
-The results, insights, ideas and thoughts presented here, would have been impossible without the continuous interaction with colleagues in the \href{{http://www.mn.uio.no/english/about/collaboration/cse/}}{Computing in Science Education} project.
+The results, insights, ideas and thoughts presented here, would have been impossible without the infinitely many  interactions with colleagues in the \href{{http://www.mn.uio.no/english/about/collaboration/cse/}}{Computing in Science Education} project \textbf{and all our fantastisc students who continuously give us new insights! Thanks}
 \end{block}
 \begin{columns}
 \column{0.4\textwidth}
@@ -552,8 +555,6 @@ The results, insights, ideas and thoughts presented here, would have been imposs
 \item Solveig Kristensen and Annik Myhre
 
 \item Hanne Sølna
-
-\item \textbf{And: all our fantastisc students who keep giving us new insights!}
 \end{itemize}
 
 \noindent
