--- a/doc/src/future.p.tex
+++ b/doc/src/future.p.tex
@@ -229,7 +229,8 @@ A set of instructions to solve a problem.
 
 
 % --- begin paragraph admon ---
-\paragraph{Algorithmic thinking applies to all disciplines. It.}
+\paragraph{}
+\textbf{Algorithmic thinking applies to all disciplines. It}
 \begin{itemize}
 \item Enhances instruction-based teaching
 
@@ -629,6 +630,8 @@ has the potential to make UiO a top European university
 \item Hire ten young professors (age $< 40$) dedicated to innovative \emph{computational} research and education
 
 \item Establish another ten professorships with  shared positions between the  new department and the discipline-specificdepartment (physics, chemistry, ...)
+
+\item Establish  best practices for computational and educational innovations, with a particular focus on  new learning material 
 \end{itemize}
 
 \noindent
@@ -667,7 +670,7 @@ has the potential to make UiO a top European university
 
 % --- begin paragraph admon ---
 \paragraph{}
-The results, insights, ideas and thoughts presented here, would have been impossible without the continuous interaction with colleagues in the \href{{http://www.mn.uio.no/english/about/collaboration/cse/}}{Computing in Science Education} project.
+The results, insights, ideas and thoughts presented here, would have been impossible without the infinitely many  interactions with colleagues in the \href{{http://www.mn.uio.no/english/about/collaboration/cse/}}{Computing in Science Education} project \textbf{and all our fantastisc students who continuously give us new insights! Thanks}
 % --- end paragraph admon ---
 
 
@@ -687,8 +690,6 @@ The results, insights, ideas and thoughts presented here, would have been imposs
 \item Solveig Kristensen and Annik Myhre
 
 \item Hanne Sølna
-
-\item \textbf{And: all our fantastisc students who keep giving us new insights!}
 \end{itemize}
 
 \noindent
@@ -705,6 +706,8 @@ The results, insights, ideas and thoughts presented here, would have been imposs
 
 
 % !eslidecell
+
+
 
 
 
